# projekt-2

CMake_projekt_2/: CMakeLists.txt  CMake_projekt_2.cpp  CMake_projekt_2.h
